fixed text layer alignment

--- a/app/react/App/scss/modules/_document.scss
+++ b/app/react/App/scss/modules/_document.scss
@@ -39,7 +39,7 @@
     }
   }
 
-  div.force-rtl {
+  div.raw-text.force-rtl {
     /*!rtl:ignore*/
     direction: rtl;
   }
